<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/layout_background">

    <android.support.v7.widget.Toolbar
        android:id="@+id/contactUsToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/toolbar_background"
        android:minHeight="?attr/actionBarSize"
        android:layoutDirection="ltr"
        android:textDirection="ltr"
        app:title="@string/navigation_menu_contact_us"
        app:titleTextColor="@color/toolbar_text" />

    <View
        style="@style/toolbarLine"
        android:id="@+id/toolbarLine" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:id="@+id/scrollView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layoutDirection="rtl"
            android:textDirection="rtl"
            android:background="@color/layout_background">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginTop="3dp"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"
                android:background="@drawable/x_background_dark">

                <com.makeramen.roundedimageview.RoundedImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/image_sajjad"
                    app:riv_border_width="2dp"
                    app:riv_border_color="@color/user_image_border"
                    app:riv_oval="true" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_gravity="center"
                    android:paddingRight="5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#FFFFFF"
                        android:text="@string/textview_developer_name"
                        android:id="@+id/userNameTextView"
                        android:textSize="14sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/phoneTextView"
                        android:textColor="#FFFFFF"
                        android:text="@string/textview_developer_phone_number"
                        android:textSize="14sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:text="@string/textview_developer_email"
                        android:textColor="#FFFFFF" />
                </LinearLayout>

            </LinearLayout>

            <EditText
                style="@style/editTextBorder"
                android:hint="@string/edittext_suggest_hint"
                android:maxLength="1000"
                android:inputType="textMultiLine"
                android:id="@+id/bugDescriptionEditText"
                android:layout_margin="3dp"
                android:maxLines="50"
                android:lines="6"
                android:textColor="#000000" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/MainButton"
                android:layout_marginRight="3dp"
                android:layout_marginLeft="3dp"
                android:text="@string/button_send"
                android:onClick="sendSuggest"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textStyle="bold"
                android:textSize="12sp"
                android:gravity="center"
                android:id="@+id/appVersion"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>