<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/layout_background">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/toolbar_background"
        android:minHeight="?attr/actionBarSize"
        android:textDirection="ltr"
        android:layoutDirection="ltr"
        app:titleTextColor="@color/toolbar_text"
        app:title="@string/toolbar_title_login"
        android:id="@+id/loginToolbar" />

    <View
        style="@style/toolbarLine"
        android:id="@+id/toolbarLine" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:textDirection="rtl"
            android:layoutDirection="rtl"
            android:padding="5dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/x_border_gray"
                android:padding="10dp"
                android:text="@string/note_enter_phone_number"
                android:textColor="#333333"
                android:textSize="14sp"
                android:textAlignment="center" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/x_border_gray"
                android:maxLength="11"
                android:maxLines="1"
                android:hint="09*********"
                android:textAlignment="center"
                android:textSize="22sp"
                android:inputType="number"
                android:id="@+id/phoneNumberEditText"
                android:layoutDirection="ltr"
                android:textDirection="ltr"
                android:padding="10dp"
                android:layout_marginTop="5dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/x_border_gray"
                android:padding="10dp"
                android:text="@string/note_this_phone_number_would_be_used"
                android:textColor="@color/colorPrimary"
                android:textSize="14sp"
                android:textAlignment="center"
                android:layout_marginTop="5dp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_send_code"
                style="@style/MainButton"
                android:id="@+id/sendPassButton"
                android:layout_marginTop="5dp" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>